# claw-vcs

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FEATURE_GAP_ANALYSIS.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  SUPPORT.md  deny.toml  dist-workspace.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml  question.yml  security_bug.md
.github/workflows/: ci.yml  codeql.yml  compat-matrix.yml  contract-diff.yml  contract-tests.yml  cross-version-runtime.yml  dependency-review.yml  deploy-validation.yml  large-repo-drill.yml  nightly-chaos.yml  pages.yml  release-channel-smoke.yml  release.yml  sbom.yml  scorecard.yml  security-audit.yml  semgrep.yml  soak-24h.yml  verify-artifacts.yml
crates/claw/: Cargo.toml
crates/claw-core/: Cargo.toml  build.rs
crates/claw-core/benches/: cof.rs
crates/claw-core/proto/claw/: common.proto  event.proto
crates/claw-core/src/: cof.rs  error.rs  hash.rs  id.rs  lib.rs  object.rs  proto_conv.rs
crates/claw-core/src/types/: blob.rs  capsule.rs  change.rs  conflict.rs  intent.rs  mod.rs  patch.rs  policy.rs  reflog.rs  revision.rs  snapshot.rs  tree.rs  workstream.rs
crates/claw-core/tests/: cof_corruption.rs  serialization_props.rs
crates/claw-crypto/: Cargo.toml
crates/claw-crypto/src/: capsule.rs  encrypt.rs  error.rs  keypair.rs  lib.rs  recipient.rs  sign.rs  verify.rs
crates/claw-crypto/tests/: capsule_tamper.rs
crates/claw-git/: Cargo.toml
crates/claw-git/benches/: import_export.rs
crates/claw-git/src/: blob_convert.rs  commit_convert.rs  error.rs  exporter.rs  importer.rs  lib.rs  tree_convert.rs
crates/claw-git/tests/: git_bridge_real_git.rs
crates/claw-merge/: Cargo.toml
crates/claw-merge/benches/: merge.rs
crates/claw-merge/src/: emit.rs  lib.rs
crates/claw-patch/: Cargo.toml
crates/claw-patch/benches/: codecs.rs
crates/claw-patch/src/: binary.rs  codec.rs  error.rs  json_tree.rs  lib.rs  registry.rs  text_line.rs
crates/claw-patch/tests/: codec_props.rs
crates/claw-policy/: Cargo.toml
crates/claw-policy/src/: checks.rs  context.rs  error.rs  evaluator.rs  lib.rs  plugin.rs  sensitive_paths.rs  visibility.rs
crates/claw-policy/tests/: fail_closed.rs
crates/claw-store/: Cargo.toml
crates/claw-store/benches/: snapshot_store.rs
crates/claw-store/src/: error.rs  index.rs  lib.rs  lockfile.rs  loose.rs  pack.rs  reflog.rs  refs.rs
crates/claw-store/tests/: path_safety.rs  store_props.rs
crates/claw-sync/: Cargo.toml  build.rs
crates/claw-sync/benches/: protocol.rs
crates/claw-sync/proto/claw/: capsule.proto  change.proto  intent.proto  sync.proto  workstream.proto
crates/claw-sync/src/: capsule_service.rs  change_service.rs  client.rs  compat.rs  event_service.rs  http_client.rs  intent_service.rs  lib.rs  negotiation.rs  partial_clone.rs  protocol.rs  security.rs  server.rs  transport.rs  workstream_service.rs
crates/claw/deploy/container/: Dockerfile  entrypoint.sh
crates/claw/deploy/container/probes/: healthcheck.sh
crates/claw/deploy/helm/claw/: Chart.yaml  values.yaml
crates/claw/deploy/helm/claw/templates/: deployment.yaml  hpa.yaml  pdb.yaml  pvc.yaml  service.yaml
crates/claw/deploy/systemd/: claw-daemon.service.tpl
crates/claw/deploy/terraform/: README.md  main.tf  variables.tf
crates/claw/src/: auth_store.rs  config.rs  diff_render.rs  error.rs  ignore.rs  main.rs  worktree.rs
crates/claw/src/commands/: admin.rs  agent.rs  auth.rs  branch.rs  change.rs  checkout.rs  completion.rs  completions.rs  daemon.rs  diff.rs  doctor.rs  git_export.rs  git_import.rs  git_notes.rs  git_roundtrip.rs  init.rs  integrate.rs  intent.rs  log.rs  mod.rs  plugin.rs  policy.rs  reflog.rs  remote.rs  ship.rs  show.rs  snapshot.rs  stash.rs  sync.rs  tag.rs  version.rs  workstream.rs
crates/claw/wix/: main.wxs
docs/: README.md  index.html  landing-page.md
docs/adr/: 0001-no-staging-area.md  0002-object-id-hashing.md  0003-protobuf-and-cof.md  0004-grpc-sync.md  0005-intent-change-revision.md  0006-capsules-as-repo-objects.md  0007-policy-objects-in-repo.md  README.md
docs/agents/: agent-registration.md  capsule-evidence.md  change-workflow.md  evidence-freshness.md  evidence-schema.md  index.md  integration-guide.md  key-rotation-and-revocation.md
docs/cli/: README.md  admin.md  agent.md  auth.md  branch.md  change.md  checkout.md  completions.md  daemon.md  diff.md  doctor.md  exit-codes.md  git-export.md  git-import.md  git-roundtrip.md  init.md  integrate.md  intent.md  log.md  patch.md  plugin.md  policy.md  remote.md  resolve.md  ship.md  show.md  snapshot.md  status.md  sync.md  version.md
docs/concepts/: agent-honesty-is-not-enough.md  capsules-and-evidence.md  claw-vs-attestations.md  index.md  intent-change-revision.md  object-model.md  policies.md
docs/getting-started/: quickstart.md
docs/maintainers/: dependency-policy.md  deprecations.md  governance.md  guide.md  telemetry.md
docs/migration/: from-git.md  index.md  upgrade-checklist.md
docs/operations/: backlog-coverage.md  disaster-recovery.md  external-blockers.json  (+12 more)
examples/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: core_cof_decode.rs  crypto_capsule.rs  git_import_parse.rs  json_tree_merge.rs  object_id_parse.rs  patch_apply.rs  patch_codecs.rs  policy_checks.rs  store_objects.rs  sync_chunk_decode.rs
scripts/: demo.sh  public-launch-preflight.sh  publish-cratesio.sh  verify-generated-protos.sh  verify-github-labels.sh  verify-name-clearance-evidence.sh  verify-release-channel.sh
supply-chain/: config.toml
tests/integration/: Cargo.toml  backlog_gap_tests.rs  chaos_tests.rs  cli_admin_git_workflow_tests.rs  cli_core_workflow_tests.rs  cli_error_contract_tests.rs  cli_sync_e2e_tests.rs  cross_version_runtime_tests.rs  daemon_http_contract_tests.rs  live_daemon_support.rs  load_soak_tests.rs  ops_artifacts_tests.rs  spec_tests.rs  support.rs  vector_manifest_tests.rs  version_compatibility_fixtures.json
(+75 files in other folders)
