[workspace]
resolver = "2"
members = [
    "crates/claw-core",
    "crates/claw-store",
    "crates/claw-patch",
    "crates/claw-merge",
    "crates/claw-crypto",
    "crates/claw-policy",
    "crates/claw-sync",
    "crates/claw-git",
    "crates/claw",
    "tests/integration",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Claw contributors"]
description = "Intent-native, agent-native version control."
homepage = "https://github.com/shree-git/claw"
repository = "https://github.com/shree-git/claw"

[workspace.dependencies]
# Hashing & encoding
blake3 = "1.8"
data-encoding = "2.9"
crc32fast = "1.5"
hex = "0.4"

# Compression
zstd = "0.13"
flate2 = "1.1"

# Crypto
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
prost = "0.13"
prost-types = "0.13"
prost-build = "0.13"
protoc-bin-vendored = "3.2"

# gRPC
tonic = "0.12"
tonic-build = "0.12"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Storage
redb = "2.4"
tempfile = "3.15"

# IDs
ulid = { version = "1.2", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
thiserror = "2.0"

# Bytes
bytes = "1.9"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2.1"
webbrowser = "1.0"

# Diffing
similar = "2.6"

# Glob matching
globset = "0.4"

# Testing
proptest = "1.6"

# Internal crates
claw-core = { path = "crates/claw-core" }
claw-store = { path = "crates/claw-store" }
claw-patch = { path = "crates/claw-patch" }
claw-merge = { path = "crates/claw-merge" }
claw-crypto = { path = "crates/claw-crypto" }
claw-policy = { path = "crates/claw-policy" }
claw-sync = { path = "crates/claw-sync" }
claw-git = { path = "crates/claw-git" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
