[workspace]
resolver = "2"
members = [
    "crates/claw-core",
    "crates/claw-store",
    "crates/claw-patch",
    "crates/claw-merge",
    "crates/claw-crypto",
    "crates/claw-policy",
    "crates/claw-sync",
    "crates/claw-git",
    "crates/claw",
    "tests/integration",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Claw contributors"]
description = "Claw VCS: intent-native, agent-native version control."
homepage = "https://github.com/shree-git/claw-vcs"
repository = "https://github.com/shree-git/claw-vcs"
readme = "README.md"
keywords = ["vcs", "provenance", "ai-agents", "version-control"]
categories = ["command-line-utilities", "development-tools"]
publish = ["crates-io"]

[workspace.dependencies]
# Hashing & encoding
blake3 = "1.8"
data-encoding = "2.9"
crc32fast = "1.5"
hex = "0.4"

# Compression
zstd = "0.13"
flate2 = "1.1"

# Crypto
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
protoc-bin-vendored = "3.2"

# gRPC
tonic = "0.14"
tonic-prost = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"

# Async
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Storage
redb = "2.4"
tempfile = "3.15"

# IDs
ulid = { version = "1.2", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
anyhow = "1.0"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
thiserror = "2.0"

# Bytes
bytes = "1.9"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2.1"
webbrowser = "1.0"

# Diffing
similar = "2.6"

# Glob matching
globset = "0.4"

# Testing
proptest = "1.6"
criterion = "0.5"

# Internal crates
claw-core = { package = "claw-vcs-core", version = "0.1.0", path = "crates/claw-core" }
claw-store = { package = "claw-vcs-store", version = "0.1.0", path = "crates/claw-store" }
claw-patch = { package = "claw-vcs-patch", version = "0.1.0", path = "crates/claw-patch" }
claw-merge = { package = "claw-vcs-merge", version = "0.1.0", path = "crates/claw-merge" }
claw-crypto = { package = "claw-vcs-crypto", version = "0.1.0", path = "crates/claw-crypto" }
claw-policy = { package = "claw-vcs-policy", version = "0.1.0", path = "crates/claw-policy" }
claw-sync = { package = "claw-vcs-sync", version = "0.1.0", path = "crates/claw-sync" }
claw-git = { package = "claw-vcs-git", version = "0.1.0", path = "crates/claw-git" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
