[package]
name = "claw-vcs-core"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "Core object types and Claw Object Format encoding for Claw VCS."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
name = "claw_core"

[dependencies]
blake3 = { workspace = true }
data-encoding = { workspace = true }
crc32fast = { workspace = true }
hex = { workspace = true }
zstd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
ulid = { workspace = true }
rand = { workspace = true }
prost = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "cof"
harness = false
