[package]
name = "claw-vcs-crypto"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "Capsule signing, verification, and encryption primitives for Claw VCS."
homepage.workspace = true
repository.workspace = true

[lib]
name = "claw_crypto"

[dependencies]
claw-core = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
chacha20poly1305 = "0.10"
x25519-dalek = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
