[package]
name = "claw-git"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
claw-core = { workspace = true }
claw-store = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "import_export"
harness = false
