[package]
name = "claw-vcs-git"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "Git import, export, and roundtrip plumbing for Claw VCS."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
name = "claw_git"

[dependencies]
claw-core = { workspace = true }
claw-store = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "import_export"
harness = false
