[package]
name = "claw-vcs-merge"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "Three-way merge support and conflict handling for Claw VCS."
homepage.workspace = true
repository.workspace = true

[lib]
name = "claw_merge"

[dependencies]
claw-core = { workspace = true }
claw-patch = { workspace = true }
claw-store = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "merge"
harness = false
