[package]
name = "claw-vcs-patch"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "Patch codecs, diff, apply, and merge helpers for Claw VCS."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
name = "claw_patch"

[dependencies]
claw-core = { workspace = true }
similar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "codecs"
harness = false
