[package]
name = "claw-vcs-policy"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "Policy evaluation and visibility checks for Claw VCS."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
name = "claw_policy"

[dependencies]
claw-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
