[package]
name = "claw-store"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
claw-core = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
redb = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "snapshot_store"
harness = false
