[package]
name = "claw-vcs-store"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "Content-addressed object storage, refs, and snapshot support for Claw VCS."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
name = "claw_store"

[dependencies]
claw-core = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
redb = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "snapshot_store"
harness = false
