[package]
name = "claw-sync"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
claw-core = { workspace = true }
claw-store = { workspace = true }
claw-crypto = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
