[package]
name = "claw-vcs-sync"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description = "gRPC sync protocol, event streaming, and remote services for Claw VCS."
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lib]
name = "claw_sync"

[dependencies]
claw-core = { workspace = true }
claw-store = { workspace = true }
claw-crypto = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true, features = ["tls-ring"] }
tonic-prost = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "protocol"
harness = false

[build-dependencies]
tonic-prost-build = { workspace = true }
protoc-bin-vendored = { workspace = true }
