[package]
name = "claw-vcs"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[package.metadata.wix]
upgrade-guid = "A0125272-4F24-4EBE-8DE9-805BA0342C28"
path-guid = "CC3E2CC8-5DEF-48FF-8708-A2F785DEB9FD"
license = false
eula = false

[[bin]]
name = "claw"
path = "src/main.rs"

[dependencies]
claw-core = { workspace = true }
claw-store = { workspace = true }
claw-patch = { workspace = true }
claw-merge = { workspace = true }
claw-crypto = { workspace = true }
claw-policy = { workspace = true }
claw-sync = { workspace = true }
claw-git = { workspace = true }
tonic = { workspace = true, features = ["tls-ring"] }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
hex = { workspace = true }
globset = { workspace = true }
similar = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
urlencoding = { workspace = true }
webbrowser = { workspace = true }
rand = { workspace = true }
prometheus = { version = "0.13", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }
