[package]
name = "claw-integration-tests"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[[test]]
name = "spec_tests"
path = "spec_tests.rs"

[[test]]
name = "ops_artifacts_tests"
path = "ops_artifacts_tests.rs"

[[test]]
name = "chaos_tests"
path = "chaos_tests.rs"

[[test]]
name = "daemon_http_contract_tests"
path = "daemon_http_contract_tests.rs"

[[test]]
name = "cross_version_runtime_tests"
path = "cross_version_runtime_tests.rs"

[[test]]
name = "load_soak_tests"
path = "load_soak_tests.rs"

[[test]]
name = "cli_core_workflow_tests"
path = "cli_core_workflow_tests.rs"

[[test]]
name = "cli_sync_e2e_tests"
path = "cli_sync_e2e_tests.rs"

[[test]]
name = "cli_error_contract_tests"
path = "cli_error_contract_tests.rs"

[[test]]
name = "cli_admin_git_workflow_tests"
path = "cli_admin_git_workflow_tests.rs"

[[test]]
name = "backlog_gap_tests"
path = "backlog_gap_tests.rs"

[dependencies]
claw-core = { workspace = true }
claw-store = { workspace = true }
claw-patch = { workspace = true }
claw-merge = { workspace = true }
claw-crypto = { workspace = true }
claw-policy = { workspace = true }
claw-sync = { workspace = true }
claw-git = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
